// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button styled Wrapper should render the button with a onlyIcon 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  height: 30px;
  padding: 0;
  border: 0;
  border-radius: 30px;
  color: #fff;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition: background 300ms ease-in-out;
  transition: background 300ms ease-in-out;
}

.c0:hover {
  background: #37cbaa;
}

<div
  className="c0"
>
  <div>
    Click me
  </div>
</div>
`;

exports[`Button styled Wrapper should render the button with a onlyIcon 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 30px;
  padding: 0 20px;
  border: 0;
  border-radius: 4px;
  color: #fff;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition: background 300ms ease-in-out;
  transition: background 300ms ease-in-out;
}

.c0:hover {
  background: #37cbaa;
}

<div
  className="c0"
>
  <div>
    Click me
  </div>
</div>
`;
